--- a/src/index.css
+++ b/src/index.css
@@ -5,23 +5,26 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 30px;
 }
 
-.column-wrapper{
+.column-wrapper {
   display: flex;
 }
 
-.column-wrapper-item{
+.column-wrapper-item {
   padding-right: 20px;
 }
 
-span{
+span {
   padding-left: 5px;
 }
 
+.no-resize {
+  resize: none;
+}
